@@ -40,7 +40,7 @@
   holder.
 -->
 
-<web-app>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <servlet>
         <servlet-name>com.sun.jersey.test.functional.servlet3.preliminaryapp.OneAndTwoApplication</servlet-name>
         <!--<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>-->
@@ -112,5 +112,9 @@
     <servlet-mapping>
         <servlet-name>com.sun.jersey.test.functional.servlet3.preliminaryapp.TwoApplication</servlet-name>
         <url-pattern>/twoonly/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>com.sun.jersey.test.functional.servlet3.preliminaryapp.OneAndTwoApplication</servlet-name>
+        <url-pattern>*.txt</url-pattern>
     </servlet-mapping>
 </web-app>
